--- a/Amit-project-1.html
+++ b/Amit-project-1.html
@@ -81,13 +81,58 @@
             </div>
         </section>
 
-        <section>
+        <section class="prof-team">
             <header>
-
+                Professional Team for you
             </header>
+            <div class="team-body">
+                <div class="member">
+                    <img src="pic-3.jpg" alt="boy">
+                    <div class="member-content">
+                        <h2>Andrew Orange</h2>
+                        <h3>Art director</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum facere fuga delectus odio
+                            pariatur, architecto illum quam repellat, culpa hic </p>
+                    </div>
+
+                </div>
+                <div class="member">
+                    <div class="member-content">
+                        <h2>Andrew Orange</h2>
+                        <h3>Art director</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum facere fuga delectus odio
+                            pariatur, architecto illum quam repellat, culpa hic </p>
+                    </div>
+                    <img src="pic-3.jpg" alt="boy">
+                </div>
+                <div class="member">
+                    <img src="pic-3.jpg" alt="boy">
+                    <div class="member-content">
+                        <h2>Andrew Orange</h2>
+                        <h3>Art director</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum facere fuga delectus odio
+                            pariatur, architecto illum quam repellat, culpa hic </p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
-            4
+            <div class="poeple-say-section">
+                <div class="left-side">
+                    <img src="poeple say.JPG" alt="">
+                </div>
+                <div class="right-side">
+                    <div class="right-side-body">
+                    <h1>
+                        What poeple say
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et deleniti voluptatibus, mollitia perspiciatis labore numquam nobis placeat voluptatem corrupti omnis similique nemo quidem voluptates! Iure fuga vel quibusdam velit?  
+                    </p>
+                    </div>
+
+                </div>
+            </div>
         </section>
         <section>
             5
