style-plan-section

--- a/Amit-project-1.html
+++ b/Amit-project-1.html
@@ -123,19 +123,77 @@
                 </div>
                 <div class="right-side">
                     <div class="right-side-body">
-                    <h1>
-                        What poeple say
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et deleniti voluptatibus, mollitia perspiciatis labore numquam nobis placeat voluptatem corrupti omnis similique nemo quidem voluptates! Iure fuga vel quibusdam velit?  
-                    </p>
+                        <h1>
+                            What poeple say
+                        </h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et deleniti voluptatibus,
+                            mollitia perspiciatis labore numquam nobis placeat voluptatem corrupti omnis similique nemo
+                            quidem voluptates! Iure fuga vel quibusdam velit?
+                        </p>
                     </div>
 
                 </div>
             </div>
         </section>
-        <section>
-            5
+        <section class="plan-section">
+            <header>
+                Choose any plan
+            </header>
+            <div class="plan-body">
+                <div class="category">
+                    <h3>Student</h3>
+                    <div class="list">
+                        <li>Responsive</li>
+                        <li>Dashboard</li>
+                        <li>storage</li>
+                        <li>Bandwidth</li>
+                        <li>Support</li>
+                    </div>
+                    <div class="buttom-part">
+                        <p>$200/mo</p>
+                        <button>
+                            Register now
+                        </button>
+                    </div>
+
+                </div>
+                <div class="category">
+                    <h3>Business</h3>
+                    <div class="list">
+                        <li>Responsive</li>
+                        <li>Dashboard</li>
+                        <li>storage</li>
+                        <li>Bandwidth</li>
+                        <li>Support</li>
+                    </div>
+                    <div class="buttom-part">
+                        
+                        <p>$200/mo</p>
+                        <button>
+                            Register now
+                        </button>
+                    </div>
+                </div>
+                    <div class="category">
+                        <h3>Professional</h3>
+                        <div class="list">
+                            <li>Responsive</li>
+                            <li>Dashboard</li>
+                            <li>storage</li>
+                            <li>Bandwidth</li>
+                            <li>Support</li>
+                        </div>
+                        <div class="buttom-part">
+                            <p>$200/mo</p>
+                            <button>
+                                Register now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
         </section>
         <section>
             6
