--- a/Amit-project-1.html
+++ b/Amit-project-1.html
@@ -117,26 +117,34 @@
             </div>
         </section>
         <section>
-            <div class="poeple-say-section">
-                <div class="left-side">
-                    <img src="poeple say.JPG" alt="">
-                </div>
-                <div class="right-side">
-                    <div class="right-side-body">
-                        <h1>
-                            What poeple say
-                        </h1>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et deleniti voluptatibus,
-                            mollitia perspiciatis labore numquam nobis placeat voluptatem corrupti omnis similique nemo
-                            quidem voluptates! Iure fuga vel quibusdam velit?
-                        </p>
+            <div class="poeple-container">
+                <div class="poeple-say-section">
+                    <div class="left-side">
+                        <img src="poeple say.JPG" alt="">
                     </div>
+                    <div class="right-side">
+                        <div class="right-side-body">
+                            <h1>
+                                What poeple say
+                            </h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et deleniti voluptatibus,
+                                mollitia perspiciatis labore numquam nobis placeat voluptatem corrupti omnis similique
+                                nemo
+                                quidem voluptates! Iure fuga vel quibusdam velit?
+                            </p>
+                            <div class="boy-image">
+                                <img src="small boy.jpeg" alt="boy">
+                                <p>Sofia</p>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
         </section>
         <section class="plan-section">
+
             <header>
                 Choose any plan
             </header>
@@ -168,30 +176,30 @@
                         <li>Support</li>
                     </div>
                     <div class="buttom-part">
-                        
+
                         <p>$200/mo</p>
                         <button>
                             Register now
                         </button>
                     </div>
                 </div>
-                    <div class="category">
-                        <h3>Professional</h3>
-                        <div class="list">
-                            <li>Responsive</li>
-                            <li>Dashboard</li>
-                            <li>storage</li>
-                            <li>Bandwidth</li>
-                            <li>Support</li>
-                        </div>
-                        <div class="buttom-part">
-                            <p>$200/mo</p>
-                            <button>
-                                Register now
-                            </button>
-                        </div>
+                <div class="category">
+                    <h3>Professional</h3>
+                    <div class="list">
+                        <li>Responsive</li>
+                        <li>Dashboard</li>
+                        <li>storage</li>
+                        <li>Bandwidth</li>
+                        <li>Support</li>
+                    </div>
+                    <div class="buttom-part">
+                        <p>$200/mo</p>
+                        <button>
+                            Register now
+                        </button>
                     </div>
                 </div>
+            </div>
 
 
         </section>
