style-last-section

--- a/Amit-project-1.html
+++ b/Amit-project-1.html
@@ -204,7 +204,33 @@
 
         </section>
         <section>
-            6
+            <div class="end-container">
+                <header>
+                    Say hello to us
+                </header>
+                <div class="input-group">
+                    <form action="/action_page.php">
+                         <input type="text" placeholder="Full name" name="fname">
+                         <input type="text" placeholder="Email address" name="lname">
+                        <input class="button" type="submit" value="send message">
+                    </form>
+                </div>
+                <div class="text-body">
+                    <label for="textarea">Message</label>
+                    <textarea name="textarea" id="textarea"></textarea>
+                </div>
+                <footer>
+                    <div class="copy-right">
+                        copy-right &copy; company 2018 desssss
+                    </div>
+                    <div class="icons">
+                        <img src="facebook.svg">
+                        <img src="twitter.svg">
+                        <img src="instagram.svg">
+                    </div>
+                </footer>
+
+            </div>
         </section>
     </div>
 </body>
