--- a/Amit-project-1.html
+++ b/Amit-project-1.html
@@ -137,6 +137,11 @@
                                 <img src="small boy.jpeg" alt="boy">
                                 <p>Sofia</p>
                             </div>
+                            <div class="dots">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                         </div>
 
                     </div>
@@ -221,7 +226,7 @@
                 </div>
                 <footer>
                     <div class="copy-right">
-                        copy-right &copy; company 2018 desssss
+                        copy-right &copy; company 2018-Desgin: Tooplate
                     </div>
                     <div class="icons">
                         <img src="facebook.svg">
